added mail feature

--- a/bin/copyfiles/Gemfile
+++ b/bin/copyfiles/Gemfile
@@ -1,9 +1,9 @@
-source 'http://gemcutter.org'
-source 'http://gems.rubyforge.org'
 source 'http://rubygems.org'
-gem 'selenium-webdriver'
-gem 'mail'
-gem 'faker'
-gem 'nokogiri'
-gem 'selenium-client'
-gem 'headless'
+
+gem 'selenium-webdriver', '>= 2.32.1'
+gem 'mail', '>= 2.5.4'
+gem 'faker', '>= 1.1.2'
+gem 'nokogiri', '>= 1.5.9'
+gem 'selenium-client', '>= 1.2.18'
+gem 'headless', '>= 1.0.1'
+gem 'random-word', '>=1.3.0'
